[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gameplay/UI/Tooltip/Tooltip.gd" type="Script" id=1]

[node name="Tooltip" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1778.0
margin_bottom = -1016.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 195.0
margin_bottom = 57.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 188.0
margin_bottom = 14.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 188.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 92.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangeLabel" type="Label" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_left = 96.0
margin_right = 188.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Range"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 188.0
margin_bottom = 32.0
text = "Cost"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 188.0
margin_bottom = 50.0
autowrap = true
